Anticipatory specimen changes Applyto link. Collected changed to Coll? Header row background changed
SVN-Revision: 16917

--- a/css/catissue_suite.css
+++ b/css/catissue_suite.css
@@ -650,3 +650,8 @@ color: #000000;
 	background-color: #F6F6F6;
 	vertical-align:middle;
 }
+.tr_anti_hdrbg_blue {
+	background-color: #cce5f1;
+	height:25px;
+	vertical-align:middle;
+}
