--- a/css/catissue_suite.css
+++ b/css/catissue_suite.css
@@ -655,3 +655,10 @@ color: #000000;
 	height:25px;
 	vertical-align:middle;
 }
+
+.black_new_md{
+	font-family: verdana;
+	font-size: 11px;
+	vertical-align:middle;
+	width:5em;
+}
