--- a/css/catissue_suite.css
+++ b/css/catissue_suite.css
@@ -662,3 +662,11 @@ color: #000000;
 	vertical-align:middle;
 	width:5em;
 }
+
+.bgblue_white{
+	font-family: arial;
+	font-size: 11px;
+	font-weight:bold;
+	background-color: #FFFFFF;
+	color: #888888;
+}
