added new style blue_ar_b_17
SVN-Revision: 17510

--- a/css/catissue_suite.css
+++ b/css/catissue_suite.css
@@ -36,6 +36,12 @@ body {
 	color: #074180;
 	font-weight: bold;
 }
+.blue_ar_b_17 {
+	font-family: verdana;
+	font-size: 17px;
+	color: #074180;
+	font-weight: bold;
+}
 .blue_ar_c {
 	font-family: verdana;
 	font-size: 12px;
