Bug #11156 - Tree fails to refresh when consent  Withdrawn-discard at participant level.
SVN-Revision: 17638

--- a/flexclient/biospecimen/Layout.mxml
+++ b/flexclient/biospecimen/Layout.mxml
@@ -393,9 +393,10 @@
 	 			}
 		    }
 		    // Jignesh : this case will ocur when user edit or register particpant so refresh dataprovider
-		    if(pCollection.length == tempCollection.length){
-		    	isRefresTree= false;
-		    }
+		    //if(pCollection.length == tempCollection.length)
+		    //{
+		    //	isRefresTree= false;
+		    //}
 		    pCollection=null;
 		    pCollection = tempCollection;
 		   
