Bug#11414. Scroll in list items removed.
SVN-Revision: 17710

--- a/css/catissue_suite.css
+++ b/css/catissue_suite.css
@@ -516,7 +516,7 @@ div.autocomplete {
       margin:0;
       padding:2px;
 	  cursor:pointer;
-	  overflow:auto;
+	  overflow:none;
     }
 	.formFieldSizedNew{ /* for the autocomplete tag */
   	font-family: verdana;
