Added new style tr_anti_dividerbg_blue
SVN-Revision: 18085

--- a/css/catissue_suite.css
+++ b/css/catissue_suite.css
@@ -662,6 +662,12 @@ color: #000000;
 	vertical-align:middle;
 }
 
+.tr_anti_dividerbg_blue {
+	background-color: #cce5f1;
+	height:10px;
+	vertical-align:middle;
+}
+
 .black_new_md{
 	font-family: verdana;
 	font-size: 11px;
