Bug 11156 -  Tree fails to refresh when consent Withdrawn-discard at participant level.
SVN-Revision: 23291

--- a/flexclient/biospecimen/Layout.mxml
+++ b/flexclient/biospecimen/Layout.mxml
@@ -395,7 +395,7 @@
 		    // Jignesh : this case will ocur when user edit or register particpant so refresh dataprovider
 		    if(pCollection.length == tempCollection.length)
 		    {
-		    	isRefresTree= false;
+		    	isRefresTree= true;
 		    }
 		    pCollection=null;
 		    pCollection = tempCollection;
